<resources>
    <string name="app_name">The Booky</string>
    <string name="business_name">Business Name</string>
    <string name="business_address">Business Address</string>
    <string name="business_phone">Business Phone</string>
    <string name="business_email">Business Email</string>
    <string name="user_email">User Email</string>
    <string name="services">Services Requested</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_serivces">Customer Services</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="process_complete">Process Complete</string>
    <string name="business_owner">Business Owner</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="personal_page_image">Personal Page Image</string>
    <string name="business_needs_imageview">Business Needs ImageView</string>
    <string name="booking_page_imageview">Booking Page ImageView</string>
    <string name="booky">Booky</string>
    <string name="search_here">Search Here!</string>
    <string name="enter_your_business_credentials">Enter Your Business Credentials</string>
    <string name="enter_passcode_here">Enter Passcode Here</string>
    <string name="enter_your_business">Enter Your Business</string>
    <string name="enter_username_here">Enter Username Here</string>
    <string name="view_appointments">View Appointments</string>
    <string name="add_your_business">Add Your Business!</string>
    <string name="name">Name</string>
    <string name="pick_date">Pick Date</string>
    <string name="submit">Submit</string>
    <string name="pick_time">Pick Time</string>
    <string name="add_your_profile_information">Add Your Business Profile Information</string>
    <string name="owner_name">Owner Name</string>
    <string name="address">Address</string>
    <string name="username">Username</string>
    <string name="repeat_your_passcode">Repeat your passcode</string>
    <string name="_4_8_digit_number_passcode">4–8 digit number passcode</string>
    <string name="your_appointments">Your Appointments</string>
    <string name="intro_paragraph_one">Welcome to The Booky! Your personal appointment booking app for your local businesses. Businesses also use this application to view and manage their appointments made in the app</string>
    <string name="intro_paragraph_two">The application is very easy to use, just follow the navigation bar and it should be self-explanatory, once you open up the application after this, it will automatically take you into your personal appointments page every time. This page is your hub for personal appointments made and adding or removing your appointments. You can either hit the book appointment button on your personal page or hit the middle navigation button that also takes you to the booking section, where it will give you a list of Businesses that have signed up and are ready to take your appointment! Once you\'ve selected a business, it will take to the booking UI, which lets you input the needed information for you to book your appointment! </string>
    <string name="intro_paragraph_three">For Businesses looking to join in and take appointments its fast and easy! Just head over to the last navigation tab to access the business needs page. Here you will be able to add your business easily using the Add Your Business UI, which allows you to enter your business information and setup user credentials. Once you have successfully setup your business you can click on the view appointments button and enter your credentials to view your appointment page, where you can view and remove appointments when necessary, and also sort them by date or name using the sort buttons! If you want to see how it should look, enter this example credential, Username: Gigi1029  and Passcode: 12345678 and test it out! </string>
    <string name="introduction_page">Introduction Page</string>
    <string name="click_to_enter">Click To Enter</string>
</resources>