<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:orientation="vertical">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:background="@color/light_blue" android:baselineAligned="false">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:layout_weight="4" android:layout_marginLeft="4dp"
                android:background="@color/blue_grey" android:layout_marginBottom="4dp" android:layout_marginTop="4dp"
        >
            <TextView
                    android:text="@string/business_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/user_model_business_name_textview"
                    android:gravity="center_horizontal" android:layout_marginTop="10dp"
                    android:textColor="@color/pearl_white" android:textSize="20sp" android:textStyle="bold|italic"
                    android:padding="5dp"/>
            <TextView
                    android:text="@string/business_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/user_model_business_address_textview"
                    android:gravity="center_horizontal" android:layout_marginTop="10dp"
                    android:textColor="@color/pearl_white"/>
            <TextView
                    android:text="@string/business_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/user_model_business_phone_textview"
                    android:gravity="center_horizontal" android:layout_marginTop="10dp"
                    android:textColor="@color/pearl_white"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/user_model_business_email_textview"
                    android:gravity="center_horizontal" android:layout_marginTop="10dp"
                    android:textColor="@color/pearl_white" android:text="@string/business_email"
            />
            <TextView
                    android:text="@string/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/user_model_user_email_textview"
                    android:gravity="center_horizontal" android:layout_marginTop="15dp"
                    android:textColor="@color/pearl_white" android:layout_marginBottom="15dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:layout_weight="4" android:layout_marginRight="4dp"
                android:background="@color/blue_grey" android:layout_marginBottom="4dp" android:layout_marginTop="4dp">
            <TextView
                    android:text="@string/services"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/user_model_services_textview"
                    android:gravity="center_horizontal" android:layout_marginTop="20dp"
                    android:textColor="@color/pearl_white" android:textStyle="bold" android:textSize="16sp"/>
            <TextView
                    android:text="@string/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/user_model_date_textview"
                    android:gravity="center_horizontal" android:layout_marginTop="20dp"
                    android:textColor="@color/pearl_white" android:textStyle="bold|italic"/>
            <TextView
                    android:text="@string/time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/user_model_time_textview"
                    android:gravity="center_horizontal" android:layout_marginTop="20dp"
                    android:textColor="@color/pearl_white" android:textStyle="bold|italic"
                    android:layout_marginBottom="15dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>