<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".user_main_page" android:orientation="vertical" android:layout_margin="0dp"
        android:background="@color/blue_grey">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_weight="4" android:layout_margin="60dp"
            android:background="@color/Grey">

        <TextView
                android:text="@string/enter_your_business_credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/vault_title_textview"
                android:textColor="@color/white"
                android:textSize="24sp" android:gravity="bottom|center_horizontal" android:layout_marginTop="20dp"
                android:layout_marginStart="15dp" android:layout_marginEnd="15dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/vault_username_edittext" android:hint="@string/enter_username_here"
                android:gravity="center|center_horizontal" android:layout_marginTop="100dp"
                style="@style/BlueLightBlueGradientEditTextStyle" android:autofillHints=""
                android:layout_marginStart="15dp" android:layout_marginEnd="15dp"
                android:textColorHint="@color/pearl_white"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/vault_passcode_edittext" android:hint="@string/enter_passcode_here"
                android:gravity="center|center_horizontal" android:layout_marginTop="20dp"
                style="@style/BlueLightBlueGradientEditTextStyle" android:autofillHints=""
                android:layout_marginStart="15dp" android:layout_marginEnd="15dp"
                android:textColorHint="@color/pearl_white"/>
        <Button
                android:text="@string/enter_your_business"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/vault_submit_button"
                android:gravity="center|center_horizontal" android:layout_marginTop="100dp"
                android:layout_marginStart="15dp" android:layout_marginEnd="15dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:layout_gravity="center_horizontal" android:layout_marginBottom="10dp">
        <ImageView
                android:src="@drawable/personal_page_vector"
                android:layout_width="wrap_content" android:tag="Login_Page_Users_Page"
                android:layout_height="wrap_content" android:id="@+id/search_page_personal_page_nav_imageview"
                android:layout_weight="1" android:contentDescription="@string/personal_page_image"/>
        <ImageView
                android:src="@drawable/add_bussiness_vector"
                android:layout_width="wrap_content" android:tag="Login_Page_Book_Appointment_Page"
                android:layout_height="wrap_content" android:id="@+id/add_businessl_page_nav_imageview"
                android:layout_weight="1" android:contentDescription="@string/booking_page_imageview"/>
        <ImageView
                android:src="@drawable/business_center_vector"
                android:layout_width="wrap_content" android:tag="Login_Page_Business_Needs_Page"
                android:layout_height="wrap_content" android:id="@+id/business_needs_page_nav_imageview"
                android:layout_weight="1" android:contentDescription="@string/business_needs_imageview"/>
    </LinearLayout>
</LinearLayout>